// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders full layout properly 1`] = `
<div
  className="sc-ifAKCX cPQXDn"
  data-layout="full"
>
  <div>
    <div
      className="sc-bxivhb bAkBat"
      src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
    />
    <div
      className="sc-bdVaJa jYxQQe"
    />
  </div>
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-s8ykefz-2 eqHQXD"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-s8ykefz-1 fwKXkC"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-s8ykefz-4 tMQel"
      >
        <div
          className="file__SubHeaderText-s8ykefz-6 Drobf"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-s8ykefz-7 fOLxmk"
        >
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders split layout properly 1`] = `
<div
  className="sc-ifAKCX cPQXDn"
  data-layout="split"
>
  <div
    className="sc-bxivhb bAkBat"
    src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
  />
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-s8ykefz-2 eqHQXD"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-s8ykefz-1 fwKXkC"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-s8ykefz-4 tMQel"
      >
        <div
          className="file__SubHeaderText-s8ykefz-6 Drobf"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-s8ykefz-7 fOLxmk"
        >
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders text layout properly 1`] = `
<div
  className="sc-ifAKCX cPQXDn"
  data-layout="text"
>
  <div
    className="sc-bwzfXH domCCz"
  >
    <div
      className="sc-htpNat dcTJHt"
    >
      <div
        className="file__Vertical-s8ykefz-2 eqHQXD"
      >
        Market Analysis
      </div>
      <div
        className="file__Title-s8ykefz-1 fwKXkC"
      >
        Looking Into the Future
      </div>
      <div
        className="file__SubHeader-s8ykefz-4 tMQel"
      >
        <div
          className="file__SubHeaderText-s8ykefz-6 Drobf"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDate-s8ykefz-7 fOLxmk"
        >
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Daniel Kunitz
          </div>
          <div
            className="file__BulletText-s8ykefz-5 cjAXZc"
          >
            Jan 4, 2017
          </div>
        </div>
      </div>
    </div>
    <img
      className="file__Image-s8ykefz-3 hmZbdW"
      src="https://artsy-media-uploads.s3.amazonaws.com/YqTtwB7AWqKD95NGItwjJg%2FRachel_Rossin_portrait_2.jpg"
    />
  </div>
</div>
`;
